<resources>
    <string name="app_name">Trivial SignUp</string>
    <string name="userName">Full Name</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Log In</string>
    <string name="rememberPw">Remember Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcomeMsg">Thanks for Signing up!</string>
    <string name="backHomeBtn">Back to Sign Up Page</string>
    <string name="country_selection">select country</string>
    <string name="newUserCheck">I am a New User</string>
    <string name="newUserChecked">You checked New User</string>
    <string name="remberPassword">Remember my Password</string>

    <string name="china">China</string>
    <string name="india">India</string>
    <string name="usa">United States</string>
    <string name="uk">United Kindom</string>
</resources>
